--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "homepage": "https://bitbucket.org/krynior/ocronline#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.1",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
     "bootstrap": "^4.0.0-alpha.5",
     "bootstrap-loader": "^1.3.0",
     "css-loader": "^0.25.0",
     "del": "^2.2.2",
+    "extract-text-webpack-plugin": "1.0.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
