--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "OCR Online",
     "require": {
         "silex/silex": "^2.0",
-        "twig/twig": "^1.27"
+        "twig/twig": "^1.27",
+        "thiagoalessio/tesseract_ocr": "^0.2.1"
     },
     "authors": [
         {
