Tworzenie kontrolerów zgodnie z PSR-4

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
             "name": "Krystian Kusz",
             "email": "krystian@kusz.me"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "OCROnline\\": "src/"
+        }
+    }
 }
