--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "require": {
         "silex/silex": "^2.0",
         "twig/twig": "^1.27",
-        "thiagoalessio/tesseract_ocr": "^0.2.1"
+        "thiagoalessio/tesseract_ocr": "^0.2.1",
+        "doctrine/orm": "^2.5",
+        "symfony/yaml": "^3.1",
+        "dflydev/doctrine-orm-service-provider": "^2.0",
+        "nunopress/silex-config-service-provider": "^1.4"
     },
     "authors": [
         {
