--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "doctrine/orm": "^2.5",
         "symfony/yaml": "^3.1",
         "dflydev/doctrine-orm-service-provider": "^2.0",
-        "nunopress/silex-config-service-provider": "^1.4"
+        "nunopress/silex-config-service-provider": "^1.4",
+        "monolog/monolog": "^1.21",
+        "symfony/security": "^3.1"
     },
     "authors": [
         {
@@ -18,7 +20,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "OCROnline\\": "src/"
+            "OCROnline\\": "src/OCROnline/"
         }
     }
 }
