--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "dflydev/doctrine-orm-service-provider": "^2.0",
         "nunopress/silex-config-service-provider": "^1.4",
         "monolog/monolog": "^1.21",
-        "symfony/security": "^3.1"
+        "symfony/security": "^3.1",
+        "symfony/twig-bridge": "^3.1"
     },
     "authors": [
         {
