--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,10 @@ jspm_packages
 # Output of 'npm pack'
 *.tgz
 
-/web/assets
+# /web/assets
 jsconfig.json
-/app/cache
+/app/cache/*
+!/app/cache/.gitkeep
 .vscode
-/app/logs
+/app/logs/*
+!/app/cache/.gitkeep
