--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "silex/silex": "^2.0",
         "twig/twig": "^1.27",
-        "thiagoalessio/tesseract_ocr": "^0.2.1",
+        "thiagoalessio/tesseract_ocr": "1.0.0-RC",
         "doctrine/orm": "^2.5",
         "symfony/yaml": "^3.1",
         "dflydev/doctrine-orm-service-provider": "^2.0",
