--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/form": "^3.1",
         "symfony/validator": "^3.1",
         "symfony/config": "^3.1",
-        "symfony/translation": "^3.1"
+        "symfony/translation": "^3.1",
+        "intervention/image": "^2.3"
     },
     "authors": [
         {
